[metadata]
name = pyj
summary = Mutlihost queue
description-file =
    README.md
author = Serhii Slipushenko
author-email = slipushenko@gmail.com
home-page = https://github.com/SergSlipushenko/pyj
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    pyj

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    pyjcli = pyj.cli:cli
